# ComfyUI-WanVideoWakawave

./: .gitignore  .tracking  CHANGELOG.md  FILE_SIZE_FEATURE.md  LICENSE  README.md  WanVideoWakawaveLoraLoader.py  WanVideoWakawavePromptBuilder.py  __init__.py  pyproject.toml
.github/workflows/: publish.yml
web/: extension.js  prompt_extension.js  prompt_extension_old.js  prompt_preset_modal.css  prompt_preset_modal.js
