[project]
name = "ComfyUI-WanVideoWakawave"
description = "Advanced LoRA and Prompt management tools for WanVideo in ComfyUI with saving, recalling, and import/export features"
version = "1.0.7"
license = {file = "LICENSE"} 

[project.urls]
Repository = "https://github.com/Wakapedia/ComfyUI-WanVideoWakawave"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Wakapedia/ComfyUI-WanVideoWakawave/wiki"
"Bug Tracker" = "https://github.com/Wakapedia/ComfyUI-WanVideoWakawave/issues"

[tool.comfy]
PublisherId = "wakawave"
DisplayName = "ComfyUI-WanVideoWakawave"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
